--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,6 +20,7 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 
@@ -27,3 +28,4 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 set -g @themepack 'powerline/block/cyan'
 set -g default-terminal 'screen-256color'
+set -g @continuum-restore 'on'
